# live2d-jni

./: .gitignore  CMakeLists.txt  LAppModel.cpp  Live2D.cpp  README.cn.md  README.md  com_arkueid_live2d_Live2D.h  com_arkueid_live2d_Live2D_LAppModel.h  com_arkueid_live2d_Live2D_v3.h  com_arkueid_live2d_Live2D_v3_LAppModel.h  common.hpp  lapp_model.cpp
Framework/src/Model/: CubismUserModel.cpp
Framework/src/Motion/: ACubismMotion.hpp
Framework/src/Rendering/OpenGL/: CubismOffscreenSurface_OpenGLES2.cpp  CubismRenderer_OpenGLES2.cpp
Main/: CMakeLists.txt
Main/live2d/: LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  Log.cpp  Log.hpp
Main/src/: LAppModel.cpp  Log.cpp  Log.hpp
com/arkueid/live2d/: Live2D.java
live2d-jogl-exmaple/: build.gradle.kts  settings.gradle.kts
live2d-jogl-exmaple/live2d/src/main/java/com/arkueid/live2d/: Live2D.java
live2d-jogl-exmaple/live2d/src/test/java/: ImportTest.java
live2d-jogl-exmaple/src/main/kotlin/com/arkueid/demo/: Main.kt
live2d-lwjgl-example/live2d/src/main/java/com/arkueid/live2d/: Live2D_v3.java
live2d-lwjgl-example/src/main/kotlin/com/arkueid/demo/: Main.kt
live2d-lwjgl-exmaple/gradle/wrapper/: gradle-wrapper.properties
live2d-lwjgl-exmaple/live2d/: build.gradle.kts
live2d-lwjgl-exmaple/live2d/src/main/java/com/arkueid/live2d/: Live2D.java
live2d-lwjgl-exmaple/src/main/kotlin/com/arkueid/demo/: Main.kt
